[package]
name = "codcel-postgresql-engine"
version = "0.1.7"
edition = "2021"
authors = ["Codcel <support@codcel.io>"]
description = "PostgreSQL table implementation for Codcel, providing Excel-like lookup and filter operations backed by PostgreSQL."
documentation = "https://codcel.io"
readme = "README.md"
license-file = "LICENSES/LICENSING.md"
repository = "https://github.com/codcel-io/codcel-parquet-engine"
homepage   = "https://codcel.io"
keywords = ["excel", "finance", "codcel", "spreadsheet", "functions"]
categories = ["mathematics", "finance"]

[dependencies]
codcel-calculation-engine = { git = "https://github.com/codcel-io/codcel-calculation-engine.git", branch = "processor-libm-f64" }
codcel-table-engine = { git = "https://github.com/codcel-io/codcel-table-engine.git", branch = "processor-libm-f64" }
async-trait = "0.1.89"
datafusion = "52.2.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
anyhow = "1.0.102"
chrono = "0.4.44"
uuid = { version = "1.22.0", features = ["v4"] }
whoami = "2.1.1"
log = "0.4.29"
futures = "0.3.32"
